# rust-crud-axum

./: Cargo.toml  LICENSE  README.md  insomnia_v4_endpoints
pages/: home.html  login.html  otp.html  signup.html
src/: main.rs
src/app/: app.rs  builder.rs  mod.rs  state.rs
src/app/handlers/: auth_handlers.rs  mod.rs  permissions_handlers.rs  users_handlers.rs  web_handlers.rs
src/internal/: apperror.rs  mod.rs
src/internal/platform/: mod.rs
src/internal/platform/encryption/: jwt.rs  mod.rs
src/internal/platform/logger/: logger.rs
src/internal/platform/validator/: mod.rs  validator.rs
src/modules/: mod.rs
src/modules/auth/: auth_controller.rs  mod.rs  models.rs
src/modules/permissions/: mod.rs  models.rs  permissions_controller.rs  permissions_service.rs
src/modules/users/: mod.rs  models.rs  users_controller.rs  users_service.rs
