[package]
name = "rust-crud-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["headers", "macros"] }
chrono = "0.4.27"
hyper = { version = "0.14", features = ["full"] }
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
totp-rs = { version = "5.3", features = ["gen_secret", "qr"] }
tower = "0.4"
validator = { version = "0.15", features = ["derive"] }
